# pb-CpG-tools

./: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-THIRDPARTY.json  README.md  aligned_bam_to_cpg_scores.py  build.rs  conda_env_cpg.yaml
.github/workflows/: ci.yml  test.yml
lib/rust-vc-utils/: CHANGELOG.md  Cargo.toml  README.md
lib/rust-vc-utils/src/: bigwig_utils.rs  chrom_list.rs  containers.rs  genome_ref.rs  lib.rs  prob_util.rs  progress_reporter.rs  seq_util.rs  util.rs
lib/rust-vc-utils/src/bam_utils/: aux.rs  basemod.rs  cigar.rs  mod.rs  util.rs
lib/rust-vc-utils/test_data/: test_empty.bam  test_ref.fasta  test_ref.fasta.fai
pileup_calling_model/: info.txt  keras_metadata.pb  saved_model.pb
pileup_calling_model/variables/: variables.data-00000-of-00001  variables.index
src/: bam_scanner.rs  chrom_sites.rs  cli.rs  detect_basemod_info.rs  globals.rs  main.rs  meth_read_processor.rs  site_meth_prob.rs  tflite_model.rs  write_tracks.rs
src/models/: pileup_calling_model.v1.tflite
