[package]
name = "aligned_bam_to_cpg_scores"
version = "3.0.0"
authors = ["Chris Saunders <csaunders@pacificbiosciences.com>"]
description = "A utility to calculate CpG methylation scores from an alignment file with 5mC methylation tags. Outputs results in bed and bigwig format, including haplotype-specific results when available."
edition = "2021"
license-file="LICENSE.md"

[profile.release]
panic = "abort"

[build-dependencies]
vergen-gitcl = "1"

[dependencies]
approx = "0"
chrono = "0"
clap = { version = "4", features = ["derive", "suggestions"] }
csv = "1"
error-stack = "0"
exitcode = "1"
fern = "0"
hhmmss = "0"
log = "0"
num_cpus = "1"
rayon = "1"
rust-htslib = { version = "0.49.0", default-features = false }
rust-vc-utils = { path="lib/rust-vc-utils" }
serde = "1"
serde_derive = "1"
serde_json = "1"
simple-error = "0"
strum = { version = "0.26", features = ["derive"] }
tflite = { version = "0", optional = true }
unwrap = "1"

[features]
tflite = ["dep:tflite"]
